--- a/TimeSlotEnum/TimeSlotEnum/TimeSlotEnum.csproj
+++ b/TimeSlotEnum/TimeSlotEnum/TimeSlotEnum.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Booking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeSlot.cs" />
+    <Compile Include="TimeSlotEnumerator.cs" />
+    <Compile Include="TimeSlots.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
